# cpp-orderbook-sim

./: .clang-format  .gitignore  CMakeLists.txt  PERFORMANCE.md  README.md
.cache/clangd/index/: benchmark.cpp.921C0BA5C786B1FA.idx  main.cpp.8317F224DD25ECCB.idx  matching_engine.cpp.A0C14227DF728048.idx  matching_engine.hpp.D02E553BAF70BBA1.idx  order.cpp.1CEE44685ABD6CEE.idx  order.hpp.E5861315B9088375.idx  order_book.cpp.32EDD3BEE9916734.idx  order_book.hpp.5858B8392F47489B.idx  orderbook_test.cpp.D630F1B390E276C1.idx  trade.cpp.C229B20404CD6744.idx  trade.hpp.2F92182D3286E7B0.idx
.github/: ci.yml
build_verbose/: CMakeCache.txt  Makefile  cmake_install.cmake  orderbook_sim
include/: matching_engine.hpp  order.hpp  order_book.hpp  timersetup.hpp  trade.hpp
src/: Order.cpp  benchmark.cpp  main.cpp  matching_engine.cpp  order.cpp  order_book.cpp  trade.cpp
tests/: orderbook_test.cpp
